--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "puppeteer": "^5.5.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "md5": "^2.3.0",
+    "puppeteer": "^5.5.0",
+    "socket.io": "^3.0.3",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
